JavaFX support